Changelog
=========

2020.3.0rc5 (unreleased)
------------------------

- Allow notifying users and groups when creating a new task. [njohner]
- Enable API endpoint `@document-from-template` for tasks. [mbaechtold]


2020.3.0rc4 (2020-06-05)
------------------------

- Move the ogds groups import logger more up in the script to make debugging easier. [elioschmutz]
- Add `bumblebee_app_id` to the `@config` API endpoint. [mbaechtold]
- @teams: Order team members by last name. [lgraf]
- @ogds-groups: Order group members by last name. [lgraf]
- Bump ftw.solr to 2.8.6 to get logging improvements and filter helpers. [lgraf]
- Support placeholders in the target url of the webactions. [mbaechtold]
- Fix the upgradestep to merge notification settings from release 2020.3.0rc2 to use it's own configruation copy to not depend on future adjustments. [elioschmutz]
- Add @extract-attachments endpoint to extract mail attachments. [njohner]
- Only allow to extract each mail attachment once. [njohner]
- Do not allow deleting mail attachments anymore. [njohner]
- Rename @team API endpoint to @teams. [tinagerber]
- Avoid object lookup in DocumentLinkWidget for Solr documents and catalog brains. [buchi]
- Improve contenttree widget in handling a large amount of items. [buchi]
- Rename @ogds-user API endpoint to @ogds-users. [tinagerber]
- Update ftw.testing to version 1.20.2. This improves the performance of the testserver significantly. [buchi]
- Rename `users` attribute of @teams endpoint to `items`. [tinagerber]
- Add batching for ogds team and group serializer. [tinagerber]
- Extend @sharing endpoint with ogds_summary. [tinagerber]
- Add @ogds-groups API endpoint. [tinagerber]
- Implement custom RoleAssignmentManager based local role migration for ftw.usermigration. [deiferni]
- Fix batching in OGDSListingBaseService, properly use SQLHypermediaBatch. [deiferni]
- Remove various unneeded catalog indexes and metadata columns. [buchi,elioschmutz,mbaechtold]