@@ -117,16 +117,16 @@ class ForwardingAddForm(add.DefaultAddForm):
         """
         paths = self.request.get('paths', [])
 
-        search_endpoint = (
-            '++widget++form.widgets.responsible/search'
-            in self.request.get('ACTUAL_URL', '')
-            )
+        search_endpoints = ('++widget++form.widgets.responsible/search',
+                            '++widget++form.widgets.issuer/search',
+                            '++widget++form.widgets.informed_principals/search')
+        is_search_endpoint = any(
+            endpoint in self.request.get('ACTUAL_URL', '') for endpoint in search_endpoints)
 
         if not (
-                search_endpoint
+                is_search_endpoint
                 or paths
-                or self.request.form.get('form.widgets.relatedItems', [])
-            ):
+                or self.request.form.get('form.widgets.relatedItems', [])):
             # add status message and redirect current window back to inbox
             # but ONLY if we're not in a z3cform_inline_validation.
             IStatusMessage(self.request).addStatusMessage(
